# Zealflow

./: README.md
.github/workflows/: pypi-publish.yml
CLI/: README.md  pyproject.toml  responses.csv  responses1.csv  responses_tui.csv  schema.json
CLI/src/zealflow_cli/: __init__.py  config.py  main.py
CLI/src/zealflow_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/: .env.example  README.md  database.py  main.py  models.py  render.yaml  requirements.txt  schemas.py  zealflow.db
backend/models/: auth.py  forms.py  responses.py
backend/routers/: ai.py  auth.py  collaboration_ws.py  forms.py  responses.py
backend/services/: auth_service.py  email_service.py  supabase_client.py
mobile/: README.md  pubspec.yaml
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/test/: widget_test.dart
web/: README.md  ZealCanvas_Frontend_PRD.md  index.html  package-lock.json  package.json  zealflow_design.md
web/src/: App.jsx  index.css
web/src/components/builder/: AIGeneratePanel.jsx  Canvas.jsx  ConfigPanel.jsx  DesignPanel.jsx  FieldCard.jsx  FieldPicker.jsx  LogicPanel.jsx  Workshop.jsx
web/src/components/fields/: BasicFields.jsx  (+9 more)
web/src/contexts/: ModalContext.jsx
web/src/hooks/: useAIGenerate.js  useCollaboration.js
web/src/pages/: Admin.jsx  CollabJoinPage.jsx  Home.jsx  Profile.jsx  Settings.jsx  Verify.jsx
web/src/registry/: fieldRegistry.jsx
web/src/store/: authStore.js  formStore.js  uiStore.js
web/src/utils/: apiClient.js  formTemplates.js  logicEngine.js  supabase.js
(+9 files in other folders)
