[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zealflow-cli"
version = "0.1.0"
authors = [
  { name="AntiGravity", email="antigravity@gemini.dev" },
]
description = "Terminal interface for building and filling Zealflow workspaces."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "rich>=13.7.0",
    "questionary>=2.0.1"
]

[project.scripts]
zealflow = "zealflow_cli.main:main"
